lib/src/compiler/tests/testdata/errors/158.out
error[E047]: too many variables
 --> line:6:7
  |
6 |       for any of ($a) : ( true )
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^ too many local variables